# autodoc-test-wb

./: .env.docker.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
backend/: .env.example  mypy.ini  start_celery.py
backend/alembic/: env.py
backend/alembic/versions/: 2023_12_14_1348-cfd9dbabe3d3_create_table_excel_handle_log.py
backend/app/: config.py
backend/app/api/: main.py
backend/app/api/dependencies/: db_session_dependency.py  excel_handle_service_dependency.py  excel_handling_service_dependency.py  task_id_depenency.py
backend/app/api/routers/: excel_handle_logs_router.py  excel_handle_tasks_router.py  excel_handling_logs_router.py  excel_logs_router.py  excel_router.py
backend/app/db/: session.py  setup.py
backend/app/db/models/: base.py  (+5 more)
backend/app/enum/: excel_error_types.py  excel_handle_errors.py  excel_handle_status.py  excel_handling_errors.py  excel_handling_status.py
backend/app/exceptions/: content_type_exception.py  not_found_exception.py  uuid_exception.py
backend/app/repositories/: excel_handle_logs_repo.py  excel_handling_logs_repo.py
backend/app/schemas/: celery_task_schema.py  excel_handle_logs_schema.py  excel_handling_logs_schema.py
backend/app/services/: excel_handle_service.py  excel_handling_logs_service.py  excel_handling_service.py
backend/app/tasks/: celery_app.py  process_excel_file.py  process_excel_file_task.py
backend/app/utils/: excel_handle_log_dataclass.py  validate_uuid_format.py
backend/scripts/: start_app.py
scripts/: app.sh  celery.sh  docker-compose.yaml  flower.sh
