[tool.poetry]
name = "autodoc-test-wb"
version = "0.1.0"
description = "Test Web Service by Autodoc"
authors = ["kasuma99"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
sqlalchemy = "^2.0.23"
pydantic-settings = "^2.1.0"
sqlalchemy-utils = "^0.41.1"
pandas = "^2.1.4"
celery = "^5.3.6"
flower = "^2.0.1"
redis = "^5.0.1"
openpyxl = "^3.1.2"
python-multipart = "^0.0.6"
alembic = "^1.13.0"
psycopg2-binary = "^2.9.9"
mypy = "^1.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
